k8s/srv-jupyter-notebook.yml
kind: Service
apiVersion: v1
metadata:
  name: jupyter-notebook-service
spec:
  type: NodePort
  selector:
    app: jupyter-notebook
  ports:
  - protocol: TCP
    nodePort: 31888
    port: 8888
    targetPort: 8888
