k8s/srv-jupyterport.yml
kind: Service
apiVersion: v1
metadata:
  name: daemon-service
spec:
  type: NodePort
  selector:
    com.docker.service.name: daemon
  ports:
  - protocol: TCP
    nodePort: 33000
    port: 8080
    targetPort: 8080
